--- a/assets/scss/_dil-ing.scss
+++ b/assets/scss/_dil-ing.scss
@@ -1,4 +1,4 @@
-/* İngilizce */
+/* English */
 $gnl: gnl;
 $mnk: mn;
 $ufk: xs;
@@ -8,7 +8,12 @@ $byk: lg;
 $kcm: xl;
 $dev: hg;
 
-/* Kap Örgüsü */
+/* Grid System */
+
+$soldan: left;
+$sağdan: right;
+$öte: offset;
+
 /* Konumlama - Kap Örgüsü */
 $sütun: column;
 
