--- a/assets/scss/_dil-tr.scss
+++ b/assets/scss/_dil-tr.scss
@@ -12,6 +12,11 @@ $dev: dev;
 
 
 /* Kap Örgüsü */
+
+$soldan: soldan;
+$sağdan: sağdan;
+$öte: öte;
+
 /* Konumlama - Kap Örgüsü */
 $sütun: sütun;
 
