Konumlamalardaki hatalar düzeltildi.

--- a/assets/scss/_caprazlama.scss
+++ b/assets/scss/_caprazlama.scss
@@ -25,6 +25,7 @@
   -webkit-box-direction: reverse;
   -ms-flex-direction: column;
   -reverseflex-direction: column-reverse;
+          flex-direction: column-reverse;
 }
 
 @mixin satır {
