--- a/assets/scss/_dil-tr.scss
+++ b/assets/scss/_dil-tr.scss
@@ -44,7 +44,7 @@ $ortada-ol: ortada-ol;
 $solda-ol: solda-ol;
 
 $araları-aralık: araları-aralık;
-$dengeli-aralık: dengeli-arala;
+$dengeli-aralık: dengeli-aralık;
 $uzat: uzat;
 $uzun-ol: uzun-ol;
 
