--- a/assets/scss/_dil-ing.scss
+++ b/assets/scss/_dil-ing.scss
@@ -1,4 +1,6 @@
 /* English */
+
+/* Screen System */
 $gnl: gnl;
 $mnk: mn;
 $ufk: xs;
@@ -9,12 +11,11 @@ $kcm: xl;
 $dev: hg;
 
 /* Grid System */
-
 $soldan: left;
 $sağdan: right;
 $öte: offset;
 
-/* Konumlama - Kap Örgüsü */
+/* Konumlama - Grid System */
 $sütun: column;
 
 $kaymadan: overflow-hidden;
