--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <body data-gnl="sütun sığdır">
 
   <div data-gnl="1 1p sığdır oluk-çevre">
-    <div id="sol-alan" data-gnl="1 1p" data-kçk="4 22p sığdır oluk-çevre">
+    <div id="sol-alan" data-gnl="1 1p üstte" data-kçk="4 22p sığdır oluk-çevre">
       <div data-gnl="1 1p göbekte geniş-aralıklı" data-dev="2 3p sağda-ol göbekte-ol">
         <a data-gnl="0" href="/" class="logo2">deveb</a><span class="birincil" data-gnl="0 göbekte-ol" data-imgelik="kapsül küçük">sürüm 0.1</span>
       </div>
