Yazı renginin koyulaştırılması.

--- a/assets/scss/_ozel.scss
+++ b/assets/scss/_ozel.scss
@@ -14,11 +14,11 @@
 html{
   font-family: 'Roboto', sans-serif;
   font-size: 14.5px;
-  color: #454555; }
+  color: #24292E; }
 
 a{
   text-decoration: none;
-  color: #4c41a1; }
+  color: #4c41a1;}
 
 p{
   margin: 0.4em 0;
