Menü baştan yapılandırılıyor.

--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -1,5 +1,5 @@
 
-<div data-menü="boş" data-gnl="1 1p" data-kçk="0">
+<!--<div data-menü="boş" data-gnl="1 1p" data-kçk="0">
   <input id="belgeler" name="menu1" type="checkbox">
   <label data-gnl="1 1p ortada" data-kçk="gizle" for="belgeler">BELGELER</label>
   <ul data-menü="basamak" data-gnl="1 1p" data-kçk="0 küçükleri-gizle">
@@ -26,4 +26,35 @@
       <li><a href="/belgeler/tarayici-destegi.html" class="{% if page.url == '/belgeler/tarayici-destegi.html' %}etkin{% endif %}">Tarayıcı Desteği</a></li>
 
   </ul>
-</div>
+</div>-->
+
+<nav>
+  <input id="menü-ana" type="radio" name="ana-menü" data-kapaç="çaprazlama gizle">
+  <label for="menü-ana">•••</label>
+  <label for="menü-ana-çapraz">///</label>
+  <ul data-menü="görünür dikey">
+    <li><a href="/belgeler/deveb.html" class="{% if page.url == '/belgeler/deveb.html' %}etkin{% endif %}">Giriş</a></li>
+    <li><a href="/belgeler/kurulum.html" class="{% if page.url == '/belgeler/kurulum.html' %}etkin{% endif %}">Kurulum</a></li>
+    <li><a href="/belgeler/ekran-orgusu.html" class="{% if page.url == '/belgeler/ekran-orgusu.html' %}etkin{% endif %}">Ekran Örgüsü</a>
+    <li><a href="/belgeler/kap-orgusu.html" class="{% if page.url == '/belgeler/kap-orgusu.html' %}etkin{% endif %}">Kap Örgüsü</a>
+      <input id="kap-örgüsü" type="checkbox" data-kapaç="sağda">
+      <label for="kap-örgüsü"><span>▽</span></label>
+      <label for="kap-örgüsü"><span>▼</span></label>
+      <ul>
+        <li><a href="/belgeler/kap-orgusu/parca-duzeni.html" class="{% if page.url == '/belgeler/kap-orgusu/parca-duzeni.html' %}etkin{% endif %}">Parça Düzeni</a></li>
+        <li><a href="/belgeler/kap-orgusu/genlesme-duzeni.html" class="{% if page.url == '/belgeler/kap-orgusu/genlesme-duzeni.html' %}etkin{% endif %}">Genleşme Düzeni</a></li>
+        <li><a href="/belgeler/kap-orgusu/konumlama.html" class="{% if page.url == '/belgeler/kap-orgusu/konumlama.html' %}etkin{% endif %}">Konumlama</a></li>
+        <li><a href="/belgeler/kap-orgusu/siralama.html" class="{% if page.url == '/belgeler/kap-orgusu/siralama.html' %}etkin{% endif %}">Sıralama</a></li>
+        <li><a href="/belgeler/kap-orgusu/olcekler.html" class="{% if page.url == '/belgeler/kap-orgusu/olcekler.html' %}etkin{% endif %}">Ölçekler</a></li>
+        <li><h6 data-metin="ana gri">Örnekler</h6></li>
+        <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme.html" class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme.html' %}etkin{% endif %}">Eşit Bölme #1</a></li>
+        <li><a href="/belgeler/ornekler/kap-orgusu-esit-bolme-2.html" class="{% if page.url == '/belgeler/ornekler/kap-orgusu-esit-bolme-2.html' %}etkin{% endif %}">Eşit Bölme #2</a></li>
+      </ul>
+    </li>
+    <li><a href="/belgeler/sekme-orgusu.html" class="{% if page.url == '/belgeler/sekme-orgusu.html' %}etkin{% endif %}">Sekme Örgüsü</a></li>
+    <li><a href="/belgeler/renk-orgusu.html" class="{% if page.url == '/belgeler/renk-orgusu.html' %}etkin{% endif %}">Renk Örgüsü</a></li>
+    <li><a href="/belgeler/terimler.html" class="{% if page.url == '/belgeler/terimler.html' %}etkin{% endif %}">Terimler</a></li>
+    <li><a href="/belgeler/takim.html" class="{% if page.url == '/belgeler/takim.html' %}etkin{% endif %}">Takım</a></li>
+    <li><a href="/belgeler/tarayici-destegi.html" class="{% if page.url == '/belgeler/tarayici-destegi.html' %}etkin{% endif %}">Tarayıcı Desteği</a></li>
+  </ul>
+</nav>
