--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
     <div id="sol-alan" data-gnl="1 1p üstte" data-kçk="4 22p sığdır oluk-çevre">
       <div data-gnl="1 1p göbekte geniş-aralıklı" data-dev="2 3p sağda-ol göbekte-ol">
         <a data-gnl="0" href="/" class="logo2">deveb</a><span class="birincil" data-gnl="0 göbekte-ol" data-imgelik="kapsül küçük">sürüm 0.1</span>
+        <input id="menü-ana-çapraz" checked type="radio" name="ana-menü" data-kapaç="sağda çaprazlama">
+        <label for="menü-ana">•••</label>
+        <label for="menü-ana-çapraz">///</label>
       </div>
       <div data-gnl="1 1p" data-dev="2 3p sağda-ol üstte-ol">
         {% include icerik.html %}
