Yeni menü için oluşturulan ve kaldırılan dosyalar. SCSS çalışması yeni.

--- a/assets/scss/dvb.scss
+++ b/assets/scss/dvb.scss
@@ -5,7 +5,7 @@
 @import "KapOrgusu";
 @import "SekmeOrgusu";
 @import "imgelik";
-@import "menu";
+@import "MenuOrgusu";
 @import "uyarilar";
 @import "SinifsalRenkler";
 @import "SinifsalSekiller";
