--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,5 +1,6 @@
 <div class="" data-gnl="24 ortada göbekte">
   <ul class="menü-genel">
+    <li><a href="https://discord.gg/GeaYaCb">Takım ve Takipçi Ortamı</a></li>
     <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github"></i> Github </a></li>
     <li><a href="https://www.facebook.com/datadeveb/"> <i class="fa fa-facebook"></i> Facebook </a></li>
     <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-facebook"></i> FB Gruplar </a></li>
