--- a/temalar/ilker/assets/css/ilker.css
+++ b/temalar/ilker/assets/css/ilker.css
@@ -1,20 +1,28 @@
 /* MENÜ İMGESİ */
-[data-menü~="yatay"] li a{
+[data-menü~="yatay"][data-menü~="basit"] > li a{
   padding:5px 10px;
-  margin:4px;
+  margin:10px 4px 4px 4px;
   display: inline-block;
   text-decoration: none;
 }
-[data-menü~="yatay"] li a::after {
+[data-menü~="yatay"][data-menü~="basit"] > li a::after {
     content: '';
     display: block;
     width: 0;
     height: 6px;
-    background: #cfdd00;
+    background: #626dd4;
     transition: width .3s;
     margin-top:3px;
 }
 
-[data-menü~="yatay"] li a:hover::after {
+[data-menü~="yatay"][data-menü~="basit"] > li a:hover::after {
     width: 100%;
+}
+
+
+/* ALAN */
+.alan{
+  background-color:#626dd4;
+  background: linear-gradient(to bottom,#626dd4,#5d3bb4);
+  padding:20px 0;
 }
