--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -39,8 +39,9 @@ html{
 .yemek-adi, .product-name{
   padding-top:50px;
   padding-left:10px;
-  font-size:32px;
+  font-size:36px;
   line-height: 28px;
+  font-weight: bold;
   margin:0;
   border-left:4px solid green;
   color:#c70000;
@@ -59,4 +60,6 @@ html{
 .yemek-içeriği h2, .product-content h2{
   font-size:16px;
   font-weight: 600;
+  color:green;
+  margin-top:30px;
 }
