--- a/_includes/sosero/menu.html
+++ b/_includes/sosero/menu.html
@@ -4,10 +4,14 @@
     <label for="menü-ana">•••</label>
     <label for="menü-ana-çapraz">✕</label>
     <ul data-menü="dikey sağ-kaval" data-gnl="solda" data-kçk="sağda">
-      <li><a href="#">◘­◘­◘­<span>Anasayfa</span></a></li>
-      <li><a href="#">◘­◘­◘­<span>Blog</span></a></li>
-      <li><a href="#">◘­◘­◘<span>Hakkımızda</span></a></li>
-      <li><a href="#">◘­◘­◘<span>İletişim</span></a></li>
+      <li><a href="index02.html"><img src="/temalar/sosero/assets/img/menu/urunler.svg" alt=""><span>Ürünler</span></a></li>
+      <li><a href="index03.html"><img src="/temalar/sosero/assets/img/menu/yemektarifleri.svg" alt=""><span>Yemek Tarifleri</span></a></li>
+      <li><a href="index04.html"><img src="/temalar/sosero/assets/img/menu/uretimtesisleri.svg" alt=""><span>Üretim Tesisleri</span></a></li>
+      <li><a href="index05.html"><img src="/temalar/sosero/assets/img/menu/katalog.svg" alt=""><span>Katalog</span></a></li>
+      <li><a href="index06.html"><img src="/temalar/sosero/assets/img/menu/satisnoktalari.svg" alt=""><span>Satış Noktaları</span></a></li>
+      <li><a href="index07.html"><img src="/temalar/sosero/assets/img/menu/haberler.svg" alt=""><span>Haberler</span></a></li>
+      <li><a href="index08.html"><img src="/temalar/sosero/assets/img/menu/hakkimizda.svg" alt=""><span>Hakkımızda</span></a></li>
+      <li><a href="index09.html"><img src="/temalar/sosero/assets/img/menu/iletisim.svg" alt=""><span>İletişim</span></a></li>
     </ul>
   </nav>
 </div>
