--- a/_layouts/sosero/icerik.html
+++ b/_layouts/sosero/icerik.html
@@ -12,7 +12,7 @@
       <label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p">///</label>
     </header>
     {% include sosero/menu.html %}
-    <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan">
+    <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan dürmeden">
       {{ content }}
     </div>
     <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
