--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -16,6 +16,8 @@ html:not(.intro){
 [data-menü~="sağ-kaval"] > li a{
   position: relative;
   padding:10px;
+  display:flex;
+  justify-content: center;
 }
 [data-menü~="sağ-kaval"] > li a span{
   display:none;
